{
  "version": 4,
  "terraform_version": "1.15.8",
  "serial": 200,
  "lineage": "2f7e5df2-c46b-e661-8979-29d623603875",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "my-instance",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 2,
          "attributes": {
            "ami": "ami-03b292fa1437b64db",
            "arn": "arn:aws:ec2:eu-north-1:938998270170:instance/i-0c45eef37d2f0c4d2",
            "associate_public_ip_address": true,
            "availability_zone": "eu-north-1a",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_options": [
              {
                "core_count": 1,
                "threads_per_core": 2
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "force_destroy": false,
            "get_password_data": false,
            "hibernation": false,
            "id": "i-0c45eef37d2f0c4d2",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "c7i-flex.large",
            "ipv6_address_count": 0,
            "key_name": "terra-key",
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_protocol_ipv6": "disabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "placement_partition_number": 0,
            "primary_network_interface": [
              {
                "delete_on_termination": true,
                "network_interface_id": "eni-01945fd25eea545dc"
              }
            ],
            "primary_network_interface_id": "eni-01945fd25eea545dc",
            "private_dns": "ip-10-0-1-42.eu-north-1.compute.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "10.0.1.42",
            "public_dns": "ec2-13-48-190-42.eu-north-1.compute.amazonaws.com",
            "public_ip": "13.48.190.42",
            "region": "eu-north-1",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/sda1",
                "encrypted": false,
                "iops": 3000,
                "throughput": 125,
                "volume_id": "vol-0f859813770d82e6c",
                "volume_size": 15,
                "volume_type": "gp3"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-0b3eee3a4ee2926c9",
            "tags": {
              "Environment": "Prod",
              "Name": "terra-week"
            },
            "tags_all": {
              "Environment": "Prod",
              "Name": "terra-week"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-01f076fc061af6140"
            ]
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "938998270170",
            "id": "i-0c45eef37d2f0c4d2",
            "region": "eu-north-1"
          },
          "dependencies": [
            "aws_key_pair.keypair",
            "aws_security_group.security_group",
            "aws_subnet.public1",
            "aws_vpc.main",
            "data.aws_ami.ubuntu",
            "data.aws_availability_zones.zones",
            "data.aws_ec2_instance_types.ins_type"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "net",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:eu-north-1:938998270170:internet-gateway/igw-071d427ca6244b46e",
            "id": "igw-071d427ca6244b46e",
            "owner_id": "938998270170",
            "region": "eu-north-1",
            "tags": {
              "Environment": "Prod",
              "Name": "terra-week"
            },
            "tags_all": {
              "Environment": "Prod",
              "Name": "terra-week"
            },
            "vpc_id": "vpc-0c57fc92ac44fd77b"
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "938998270170",
            "id": "igw-071d427ca6244b46e",
            "region": "eu-north-1"
          },
          "dependencies": [
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "route",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:eu-north-1:938998270170:route-table/rtb-06a11a74c339b64c2",
            "id": "rtb-06a11a74c339b64c2",
            "owner_id": "938998270170",
            "propagating_vgws": [],
            "region": "eu-north-1",
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-071d427ca6244b46e",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "odb_network_arn": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Environment": "Prod",
              "Name": "terra-week"
            },
            "tags_all": {
              "Environment": "Prod",
              "Name": "terra-week"
            },
            "timeouts": null,
            "vpc_id": "vpc-0c57fc92ac44fd77b"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "identity": {
            "account_id": "938998270170",
            "id": "rtb-06a11a74c339b64c2",
            "region": "eu-north-1"
          },
          "dependencies": [
            "aws_internet_gateway.net",
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "table",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0a17a3974b07f5a52",
            "region": "eu-north-1",
            "route_table_id": "rtb-06a11a74c339b64c2",
            "subnet_id": "subnet-0b3eee3a4ee2926c9"
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "938998270170",
            "id": "rtbassoc-0a17a3974b07f5a52",
            "region": "eu-north-1"
          },
          "dependencies": [
            "aws_internet_gateway.net",
            "aws_route_table.route",
            "aws_subnet.public1",
            "aws_vpc.main",
            "data.aws_availability_zones.zones"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "security_group",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-north-1:938998270170:security-group/sg-01f076fc061af6140",
            "description": "Managed by Terraform",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-01f076fc061af6140",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              }
            ],
            "name": "terra-week",
            "name_prefix": "",
            "owner_id": "938998270170",
            "region": "eu-north-1",
            "revoke_rules_on_delete": false,
            "tags": {},
            "tags_all": {},
            "timeouts": null,
            "vpc_id": "vpc-0c57fc92ac44fd77b"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "identity": {
            "account_id": "938998270170",
            "id": "sg-01f076fc061af6140",
            "region": "eu-north-1"
          },
          "dependencies": [
            "aws_vpc.main"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "public1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-north-1:938998270170:subnet/subnet-0b3eee3a4ee2926c9",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "eu-north-1a",
            "availability_zone_id": "eun1-az1",
            "cidr_block": "10.0.1.0/26",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0b3eee3a4ee2926c9",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "938998270170",
            "private_dns_hostname_type_on_launch": "ip-name",
            "region": "eu-north-1",
            "tags": {
              "Environment": "Prod",
              "Name": "terra-week"
            },
            "tags_all": {
              "Environment": "Prod",
              "Name": "terra-week"
            },
            "vpc_id": "vpc-0c57fc92ac44fd77b"
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "938998270170",
            "id": "subnet-0b3eee3a4ee2926c9",
            "region": "eu-north-1"
          },
          "dependencies": [
            "aws_vpc.main",
            "data.aws_availability_zones.zones"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc",
      "name": "main",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-north-1:938998270170:vpc/vpc-0c57fc92ac44fd77b",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/16",
            "default_network_acl_id": "acl-0cb45446e60818e47",
            "default_route_table_id": "rtb-049acb294f1980fad",
            "default_security_group_id": "sg-0950aaab53b755f39",
            "dhcp_options_id": "dopt-02f336034527832b0",
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-0c57fc92ac44fd77b",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-049acb294f1980fad",
            "owner_id": "938998270170",
            "region": "eu-north-1",
            "tags": {
              "Environment": "Prod",
              "Name": "terra-week"
            },
            "tags_all": {
              "Environment": "Prod",
              "Name": "terra-week"
            }
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "938998270170",
            "id": "vpc-0c57fc92ac44fd77b",
            "region": "eu-north-1"
          },
          "create_before_destroy": true
        }
      ]
    }
  ]
}